# NDArray

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  main.cpp  timeit.cpp
.github/workflows/: style.yml
bundled/include/lars/: dummy.h  timeit.h  to_string.h  unused.h
cmake/: LarsNDArrayConfig.cmake.in
examples/: CMakeLists.txt  matrix.cpp  matrix_timeit.cpp
include/lars/: index_tuple.h  matrix.h  ndarray.h
ndarray/: index_tuple.h  iterators.h  ndarray.h
test/: CMakeLists.txt
test/source/: index_tuple_tests.cpp  matrix_tests.cpp  ndarray_tests.cpp
tests/: CMakeLists.txt  index_tuple_tests.cpp  main.cpp  matrix_tests.cpp  ndarray_tests.cpp
